[metadata]
name = ahp
version = attr: ahp.__version__
url = https://github.com/MasaMatsu/ahp
description = Analytic Hierarchy Process
long_description = file: README.md
license: MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
